--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&amp;display=swap" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -87,36 +88,24 @@
     <!-- End Hero -->
 
     <main id="main">
-
-
         <!-- ======= About Us Section ======= -->
         <section id="about" class="about">
             <div class="container" data-aos="fade-up">
-
                 <div class="section-title">
-                    <h2>About Us</h2>
+                    <h2>Kata Pengantar</h2>
                 </div>
-
                 <div class="row content">
-                    <div class="col-lg-6">
+                    <h2 class="text-center">ِبِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم </h2>
+                    <div class="">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Alhamdulillahirobbil alamin, puji syukur kami panjatkan kehadirat Tuhan Yang Maha Esa atas kemurahan-Nya lah kami dapat menyelesaikan Modul Pembelajaran Etnomatematika Berbasis Website Untuk Meningkatkan Kemampuan Literasi Matematis. Kami mengucapkan
+                            terimakasih sebesar-besarnya kepada Litapdimas IAIN Metro yang membiayai proses pengembangan modul ini.
                         </p>
-                        <ul>
-                            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-                            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 pt-4 pt-lg-0">
-                        <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                            id est laborum.
-                        </p>
-                        <a href="#" class="btn-learn-more">Learn More</a>
+                        <p>Dengan dikembangkannya Modul Pembelajaran ini diharapkan dapat dimanfaatkan sebagai sumplemen pembelajaran tambahan yang tidak hanya dapat memfasilitasi pembelajaran peserta didik dalam mengkonstruksi pemahaman konsep tetapi juga
+                            pencapaian kemampuan literasi matematis. Tidak hanya itu, modul pembelajaran ini diharapkan dapat menumbuhkan kecintaan dan kebanggaan peserta didik terhadap budaya Indonesia.</p>
+                        <p>Modul pembelajaran ini jauh dari sempurna, untuk itu kami berharap dapat memperoleh kritik dan saran demi perbaikan modul ini. Dengan kerendahan hati, kami memohon maaf atas segala kekurangan demi perbaikan selanjutnya.</p>
                     </div>
                 </div>
-
             </div>
         </section>
         <!-- End About Us Section -->
