--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <div class="row">
 
-                    <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
+                    <div class="col  ">
 
                         <div class="content">
                             <h3>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h3>
@@ -158,10 +158,7 @@
 
                             </ul>
                         </div>
-
                     </div>
-
-                    <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
                 </div>
 
             </div>
