--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="row content">
                     <h2 class="text-center">ِبِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم </h2>
-                    <div class="">
+                    <div class="col">
                         <p>
                             Alhamdulillahirobbil alamin, puji syukur kami panjatkan kehadirat Tuhan Yang Maha Esa atas kemurahan-Nya lah kami dapat menyelesaikan Modul Pembelajaran Etnomatematika Berbasis Website Untuk Meningkatkan Kemampuan Literasi Matematis. Kami mengucapkan
                             terimakasih sebesar-besarnya kepada Litapdimas IAIN Metro yang membiayai proses pengembangan modul ini.
@@ -113,49 +113,35 @@
         <!-- ======= Why Us Section ======= -->
         <section id="why-us" class="why-us section-bg">
             <div class="container-fluid" data-aos="fade-up">
-
+                <div class="section-title">
+                    <h2>PENDAHULUAN</h2>
+                </div>
                 <div class="row">
 
-                    <div class="col  ">
+                    <div class="col">
 
                         <div class="content">
-                            <h3>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                            </p>
+
+                            <h2 class="text-center">ِبِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم </h2>
+
                         </div>
 
                         <div class="accordion-list">
                             <ul>
-                                <li>
-                                    <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                                    <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
-                                        <p>
-                                            Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
-                                        </p>
-                                    </div>
+                                <li class="rounded-2">
+                                    <p>
+                                        Modul ini merupakan bahan ajar yang dikembangkan agar Ananda dapat belajar secara mandiri. Modul ini akan membantu Ananda memahami konsep terkait bilangan. Modul ini dirancang dengan serangkaian aktivitas pembelajaran yang harus Ananda kerjakan. Pastikan
+                                        setiap aktivitas dapat diselesaikan dengan baik. Tanyakan kepada guru dan orang terdekat jika ananda mengalami kesulitan. Sebelum ananda tuntas pada satu materi, jangan dahulu lanjut kemateri berikutnya.
+                                    </p>
+                                    <p>
+                                        Strategi pembelajaran dalam modul ini memfasilitasi Ananda untuk belajar bermakna. Dengan melakukan aktivitas pembelajaran, Ananda diharapkan tidak hanya dapat menguasai kompetensi utama materi pembelajaran, Namun juga memperoleh pengalaman belajar seperti
+                                        literasi, pemecahan masalah, berfikir kreatif, komunikasi serta pengembangan karakter.
+                                    </p>
+                                    <p>Jangan jadikan masalah yang ananda temui menjadi alasan untuk ananda tidak bersemangat dan termotivasi, karena sesungguhnya Allah berfirman: لَا يُكَلِّفُ اللّٰهُ نَفْسًا اِلَّا وُسْعَهَا ۗ لَهَا مَا كَسَبَتْ وَعَلَيْهَا
+                                        مَا اكْتَسَبَتْ ۗ رَبَّنَا لَا تُؤَاخِذْنَاۤ اِنْ نَّسِيْنَاۤ اَوْ اَخْطَأْنَا ۚ رَبَّنَا وَلَا تَحْمِلْ عَلَيْنَاۤ اِصْرًا كَمَا حَمَلْتَهٗ عَلَى الَّذِيْنَ مِنْ قَبْلِنَا ۚ رَبَّنَا وَلَا تُحَمِّلْنَا مَا لَا
+                                        طَا قَةَ لَنَا بِهٖ ۚ وَا عْفُ عَنَّا ۗ وَا غْفِرْ لَنَا ۗ وَا رْحَمْنَا ۗ اَنْتَ مَوْلٰٮنَا فَا نْصُرْنَا عَلَى الْقَوْمِ الْكٰفِرِيْنَ
+                                    </p>
                                 </li>
-
-                                <li>
-                                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span> Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                                    <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
-                                        <p>
-                                            Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in
-                                            cursus turpis massa tincidunt dui.
-                                        </p>
-                                    </div>
-                                </li>
-
-                                <li>
-                                    <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                                    <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
-                                        <p>
-                                            Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna
-                                            molestie at elementum eu facilisis sed odio morbi quis
-                                        </p>
-                                    </div>
-                                </li>
-
                             </ul>
                         </div>
                     </div>
