--- a/petunjuk.html
+++ b/petunjuk.html
@@ -99,35 +99,44 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch  mt-4" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                            <h4><a href="">Lorem Ipsum</a></h4>
-                            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                            <p>Aktivitas pembelajaran yang Ananda kerjakan akan menuntun Ananda memahami konsep segiempat dan segitiga.</p>
                         </div>
                     </div>
-
-                    <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="200">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-file"></i></div>
-                            <h4><a href="">Sed ut perspici</a></h4>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                            <p>Ananda diizinkan untuk berdiskusi dengan teman sebaya dalam melakukan aktivitas pembelajaran melalui platform gmeet, zoom, video call. Bukan untuk mencontoh hasil pekerjaan temannya, tapi saling berdiskusi untuk menemukan jawaban
+                                yang tepat.</p>
                         </div>
                     </div>
 
-                    <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="300">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-tachometer"></i></div>
-                            <h4><a href="">Magni Dolores</a></h4>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                            <p>Kerjakan aktivitas pembelajaran di lembar kertas/buku latihan yang berbeda, jangan lupa untuk membubuhi tanda tangan Ayah dan Bunda, setelah itu foto/scan dengan jelas dan kumpulkan di link Gform yang sudah disediakan oleh
+                                Bapak/Ibu Guru.</p>
                         </div>
                     </div>
 
-                    <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="400">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-layer"></i></div>
-                            <h4><a href="">Nemo Enim</a></h4>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                            <p>Kerjakalah setiap aktivitas dengan cepat, baik, dan benar. Pastikan Ananda memahami setiap bagian dengan baik baru melanjutkan pada aktivitas pembelajaran selanjutnya.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="400">
+                        <div class="icon-box">
+                            <div class="icon"><i class="bx bx-layer"></i></div>
+                            <p>Setiap hasil aktivitas pembelajaran dan evaluasi akan dikoreksi oleh Bapak/Ibu guru. Hasil koreksian akan dikembalikan dengan Ananda, jangan sungkan untuk menanyakan poin-poin yang masih belum benar sebagai pembelajaran.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 " data-aos="zoom-in" data-aos-delay="400">
+                        <div class="icon-box">
+                            <div class="icon"><i class="bx bx-layer"></i></div>
+                            <p>Baiklah, selamat melakukan aktivitas pembelajaran, jangan lupa berdoa.</p>
                         </div>
                     </div>
 
