--- a/petunjuk.html
+++ b/petunjuk.html
@@ -145,8 +145,27 @@
             </div>
         </section>
         <!-- End Services Section -->
+        <section id="contact" class="contact">
+            <div class="container" data-aos="fade-up">
 
+                <div class="section-title">
+                    <h2>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h2>
 
+                </div>
+
+                <div class="row">
+
+                    <div class="col d-flex align-items-stretch">
+                        <div class="info">
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
     </main>
     <!-- End #main -->
 
