--- a/petunjuk.html
+++ b/petunjuk.html
@@ -157,7 +157,34 @@
 
                     <div class="col d-flex align-items-stretch">
                         <div class="info">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Capain Pembelajaran</th>
+                                        <th scope="col">Tujuan Pembelajaran</th>
 
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+
+                                        <td rowspan="3">Di akhir fase D, peserta didik dapat membaca, menulis,dan membandingkan bilangan bulat, bilangan rasional dan irasional, bilangan desimal, bilangan berpangkat bulat dan akar, bilangan dalam notasi ilmiah. Mereka
+                                            dapat menerapkan operasi aritmetika pada bilangan real, dan memberikan estimasi/perkiraan dalam menyelesaikan masalah termasuk berkaitan dengan (literasi finansial). Peserta didik dapat menggunakan faktorisasi
+                                            prima dan pengertian rasio (skala, proporsi, dan laju perubahan) dalam penyelesaian masalah. </td>
+                                        <td>
+                                            1. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (skala, proporsi) dalam keseharian murid
+                                        </td>
+                                    </tr>
+                                    <tr>
+
+                                        <td>2. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep rasio (laju perubahan) dalam keseharian murid</td>
+                                    </tr>
+                                    <tr>
+
+                                        <td>3. Peserta didik mampu menyelesaikan permasalahan berkaitan dengan konsep perbandingan senilai dan berbalik nilai dalam keseharian murid. </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
 
                     </div>
