--- a/petunjuk.html
+++ b/petunjuk.html
@@ -155,7 +155,7 @@
 
                 <div class="row">
 
-                    <div class="col d-flex align-items-stretch">
+                    <div class="col-lg-7 d-flex align-items-stretch">
                         <div class="info">
                             <table class="table">
                                 <thead>
@@ -187,6 +187,34 @@
                             </table>
                         </div>
 
+                    </div>
+                    <div class="col-lg-5 mt-5 mt-lg-0 d-flex align-items-stretch">
+                        <div class="info">
+                            <p>
+                                Peserta didik dapat menyelesaikan permasalahan dalam membedakan proporsi dan rasio
+                            </p>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+
+                                        <th scope="col">Konteks</th>
+                                        <th scope="col">Sosial-Budaya</th>
+
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="col">Konten</th>
+                                        <th>Bilangan</th>
+                                    </tr>
+                                    <tr>
+                                        <th>Level Kognitif</th>
+                                        <th>Pemahaman, Penerapan, Penalaran</th>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
 
                 </div>
