--- a/petunjuk.html
+++ b/petunjuk.html
@@ -51,7 +51,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">Materi</a></li>
+                    <li><a class="nav-link scrollto" href="materi.html">Materi</a></li>
                     <li><a class="nav-link scrollto" href="#services">Uji Kompetensi</a></li>
                     <li><a class="nav-link   scrollto" href="#portfolio">Daftar Pustaka</a></li>
                     <li><a class="nav-link scrollto" href="petunjuk.html">Petunjuk Penggunaan</a></li>
