--- a/materi.html
+++ b/materi.html
@@ -90,14 +90,52 @@
     <main id="main">
 
         <!-- ======= Services Section ======= -->
-        <section id="services" class="services section-bg">
+        <section class="team section-bg">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Materi</h2>
-                    <p>Updating...</p>
+                    <h2>materi</h2>
                 </div>
+                <div class="row">
+                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="member d-flex align-items-start">
+                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                                <a href="">
+                                    <h4 class="">Konsep Perbandingan (Rasio dan Proporsi)</h4>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
+                        <div class="member d-flex align-items-start">
+                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                                <h4>Perbandingan Berbalik Nilai</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                        <div class="member d-flex align-items-start">
+                            <div class="pic"><img src="assets/img/team/books3.png" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                                <h4>Rasio</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mt-4 mt-lg-4" data-aos="zoom-in" data-aos-delay="400">
+                        <div class="member d-flex align-items-start">
+                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
+                            <div class="member-info">
+                                <h4>Perbandingan Senilai</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
         </section>
