--- a/materi.html
+++ b/materi.html
@@ -102,7 +102,7 @@
                             <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
                             <div class="member-info">
                                 <a href="">
-                                    <h4 class="">Konsep Perbandingan (Rasio dan Proporsi)</h4>
+                                    <h4>Konsep Perbandingan (Rasio dan Proporsi)</h4>
                                 </a>
                             </div>
                         </div>
@@ -112,7 +112,9 @@
                         <div class="member d-flex align-items-start">
                             <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
                             <div class="member-info">
-                                <h4>Perbandingan Berbalik Nilai</h4>
+                                <a href="">
+                                    <h4>Perbandingan Berbalik Nilai</h4>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -121,7 +123,10 @@
                         <div class="member d-flex align-items-start">
                             <div class="pic"><img src="assets/img/team/books3.png" class="img-fluid" alt=""></div>
                             <div class="member-info">
-                                <h4>Rasio</h4>
+                                <a href="">
+                                    <h4>Rasio</h4>
+                                </a>
+
                             </div>
                         </div>
                     </div>
@@ -130,7 +135,10 @@
                         <div class="member d-flex align-items-start">
                             <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
                             <div class="member-info">
-                                <h4>Perbandingan Senilai</h4>
+                                <a href="">
+                                    <h4>Perbandingan Senilai</h4>
+                                </a>
+
                             </div>
                         </div>
                     </div>
