--- a/materi1.html
+++ b/materi1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Materi</title>
+    <title>Materi | Konsep Perbandingan</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -90,63 +90,7 @@
     <main id="main">
 
         <!-- ======= Services Section ======= -->
-        <section class="team section-bg">
-            <div class="container" data-aos="fade-up">
 
-                <div class="section-title">
-                    <h2>materi</h2>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="materi1.html">
-                                    <h4>Konsep Perbandingan (Rasio dan Proporsi)</h4>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="">
-                                    <h4>Perbandingan Berbalik Nilai</h4>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books3.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="">
-                                    <h4>Rasio</h4>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-4" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="">
-                                    <h4>Perbandingan Senilai</h4>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </section>
 
     </main>
     <!-- End #main -->
