--- a/materi1.html
+++ b/materi1.html
@@ -90,7 +90,25 @@
     <main id="main">
 
         <!-- ======= Services Section ======= -->
+        <section id="services" class="services section-bg">
+            <div class="container" data-aos="fade-up">
 
+                <div class="section-title">
+                    <h2>KONSEP PERBANDINGAN (RASIO DAN PROPORSI)</h2>
+                </div>
+                <div class="row">
+                    <div class="col " data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box">
+                            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                            <h4><a href="">Lorem Ipsum</a></h4>
+                            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- End Services Section -->
 
     </main>
     <!-- End #main -->
