--- a/materi1.html
+++ b/materi1.html
@@ -99,9 +99,10 @@
                 <div class="row">
                     <div class="col " data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                            <h4><a href="">Lorem Ipsum</a></h4>
-                            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                            <h4 class="fw-bold">A. RASIO</h4>
+                            <h5 class="fw-bold">Aktivitas 1</h5>
+                            <p>Indonesia adalah Negara dengan keberagaman ras, budaya, sukubangsa, agama, kepercayaan, dan bahasa yang tersebar di 38 provinsi dari Sabang hingga Merauke. Untuk itu, Indonesia memiliki semboyan Bhineka Tunggal Ika, yang berarti
+                                walaupun berbeda-beda tetap satu jua. Keragaman ini ditunjukkan dengan keragaman pakaian tradisional yang sering digunakan dalam acara-acara besar, salah satunya 17 Agustusan. </p>
                         </div>
                     </div>
                 </div>
