--- a/materi1.html
+++ b/materi1.html
@@ -103,6 +103,8 @@
                             <h5 class="fw-bold">Aktivitas 1</h5>
                             <p>Indonesia adalah Negara dengan keberagaman ras, budaya, sukubangsa, agama, kepercayaan, dan bahasa yang tersebar di 38 provinsi dari Sabang hingga Merauke. Untuk itu, Indonesia memiliki semboyan Bhineka Tunggal Ika, yang berarti
                                 walaupun berbeda-beda tetap satu jua. Keragaman ini ditunjukkan dengan keragaman pakaian tradisional yang sering digunakan dalam acara-acara besar, salah satunya 17 Agustusan. </p>
+                            <p>Perhatikan gambar berikut ini.</p>
+                            <div class="portfolio-img"><img src="assets/img/portfolio/Picture1.jpg" class="img-fluid" alt=""></div>
                         </div>
                     </div>
                 </div>
