--- a/materi1.html
+++ b/materi1.html
@@ -105,11 +105,11 @@
                                 walaupun berbeda-beda tetap satu jua. Keragaman ini ditunjukkan dengan keragaman pakaian tradisional yang sering digunakan dalam acara-acara besar, salah satunya 17 Agustusan. </p>
                             <p>Perhatikan gambar berikut ini.</p>
                             <div class="portfolio-img d-flex flex-column align-items-center">
-                                <img src="assets/img/portfolio/Picture1.jpg " class="w-lg-50" alt="">
+                                <img src="assets/img/portfolio/Picture1.jpg " class="w-lg-50 img-fluid" alt="">
                                 <p class="fw-bold text-center">Gambar 1. Pakaian Adat</p>
                                 <p class="fw-light text-center">Sumber: https://indihome.co.id/blog/5-contoh-keragaman-sosial-budaya-di-indonesia</p>
                             </div>
-
+                            <p>Dari foto pada gambar 1. </p>
                         </div>
                     </div>
                 </div>
