--- a/materi1.html
+++ b/materi1.html
@@ -110,6 +110,17 @@
                                 <p class="fw-light text-center">Sumber: https://indihome.co.id/blog/5-contoh-keragaman-sosial-budaya-di-indonesia</p>
                             </div>
                             <p>Dari foto pada gambar 1. </p>
+                            <ol class="list-group list-group-numbered">
+                                <li class="list-group-item">Apa informasi yang kamu peroleh? </li>
+                                <li class="list-group-item">Berapa jumlah anggota foto?</li>
+                                <li class="list-group-item">Tiga dari tujuh anggota foto adalah laki-laki.
+                                </li>
+                                <li class="list-group-item">Berapa perbandingan jumlah perempuan dan laki-laki dalam foto tersebut?
+                                </li>
+                                <li class="list-group-item">Jumlah wanita di dalam foto dua kali lebih banyak dari jumlah laki-lakinya. Benarkah pernyataan tersebut?
+                                </li>
+                            </ol>
+                            <p>Menurut ananda, manakah dari pernyataan-pernyataan diatas yang menjelaskan perbandingan banyak jumlah laki-laki dan perempuan di dalam foto tersebut. Berikan alasan ananda.</p>
                         </div>
                     </div>
                 </div>
