--- a/materi1.html
+++ b/materi1.html
@@ -121,6 +121,12 @@
                                 </li>
                             </ol>
                             <p>Menurut ananda, manakah dari pernyataan-pernyataan diatas yang menjelaskan perbandingan banyak jumlah laki-laki dan perempuan di dalam foto tersebut. Berikan alasan ananda.</p>
+                            <h5 class="fw-bold">Aktivitas 2</h5>
+                            <p>Perhatikan video berikut ini.</p>
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/QUT-k6v63dw" title="YouTube video" allowfullscreen></iframe>
+                            </div>
+
                         </div>
                     </div>
                 </div>
