--- a/materi1.html
+++ b/materi1.html
@@ -121,12 +121,21 @@
                                 </li>
                             </ol>
                             <p>Menurut ananda, manakah dari pernyataan-pernyataan diatas yang menjelaskan perbandingan banyak jumlah laki-laki dan perempuan di dalam foto tersebut. Berikan alasan ananda.</p>
-                            <h5 class="fw-bold">Aktivitas 2</h5>
+                            <h5 class="fw-bold mt-3">Aktivitas 2</h5>
                             <p>Perhatikan video berikut ini.</p>
                             <div class="ratio ratio-16x9">
                                 <iframe src="https://www.youtube.com/embed/QUT-k6v63dw" title="YouTube video" allowfullscreen></iframe>
                             </div>
-
+                            <div class="badge bg-dark text-wrap mt-3 p-2" style="width: 6rem;">
+                                Submit Tugas
+                            </div>
+                            <p>Rasio dapat dituliskan dalam tiga bentuk berbeda yakni, </p>
+                            <ol class="list-group list-group-numbered mt-2">
+                                <li class="list-group-item"> Pecahan, misal 3/4 </li>
+                                <li class="list-group-item">Dengan menuliskan dua bilangan yang dipisahkan dengan tanda (:), misal 3 : 4</li>
+                                <li class="list-group-item">Dengan menuliskan dua bilangan yang dipisahkan dengan kata “dan”, misal 3 dan 4.
+                                </li>
+                            </ol>
                         </div>
                     </div>
                 </div>
