--- a/materi1.html
+++ b/materi1.html
@@ -136,6 +136,8 @@
                                 <li class="list-group-item">Dengan menuliskan dua bilangan yang dipisahkan dengan kata “dan”, misal 3 dan 4.
                                 </li>
                             </ol>
+                            <h5 class="fw-bold mt-3">Aktivitas 3</h5>
+                            <p>Mari ananda mencari informasi teman-teman di lingkungan sekolah terkait berat badan dan tinggi badannya. Lalu bandingkan kedua hal tersebut?Jelaskan bagaimana ananda membandingkan.</p>
                         </div>
                     </div>
                 </div>
