--- a/materi1.html
+++ b/materi1.html
@@ -138,6 +138,17 @@
                             </ol>
                             <h5 class="fw-bold mt-3">Aktivitas 3</h5>
                             <p>Mari ananda mencari informasi teman-teman di lingkungan sekolah terkait berat badan dan tinggi badannya. Lalu bandingkan kedua hal tersebut?Jelaskan bagaimana ananda membandingkan.</p>
+                            <h4 class="fw-bold mt-3">B. PROPORSI</h4>
+                            <p>Dizaman sekarang semua hal selalu didokumentasikan melalui sebuah foto baik yang akan dipublikasi ataupun disimpan secara mandiri. Jika kita mencuci foto-foto tersebut ke tukang foto, maka mereka selalu akan menanyakan ukuran
+                                foto yang ingin di cetak, biasanya sebelum di cetak foto-foto tersebut biasa mengalami proses editing.</p>
+                            <div class="portfolio-img d-flex flex-column align-items-center mt-3">
+                                <img src="assets/img/portfolio/Picture2.jpg " class="w-lg-50 img-fluid" alt="">
+                                <p class="fw-bold text-center">Gambar 2. Kue maksuba </p>
+                                <p class="fw-light text-center mb-3">Sumber: https://indihome.co.id/blog/5-contoh-keragaman-sosial-budaya-di-indonesia</p>
+                            </div>
+                            <p>Kue maksuba adalah salah satu kue tradisional yang berasal dari provinsi Sumatera Selatan. Dilihat dari tekstur dan rasa, maksuba mirip dengan kue engkak dari provinsi lampung. Apakah kamu pernah membuat kue basah dengan ibu
+                                atau anggota keluarga lain, khususnya dalam momen hari raya? Berapa saja ukuran Loyang kue basah yang kamu ketahui?
+                            </p>
                         </div>
                     </div>
                 </div>
