--- a/materi1.html
+++ b/materi1.html
@@ -146,9 +146,15 @@
                                 <p class="fw-bold text-center">Gambar 2. Kue maksuba </p>
                                 <p class="fw-light text-center mb-3">Sumber: https://indihome.co.id/blog/5-contoh-keragaman-sosial-budaya-di-indonesia</p>
                             </div>
-                            <p>Kue maksuba adalah salah satu kue tradisional yang berasal dari provinsi Sumatera Selatan. Dilihat dari tekstur dan rasa, maksuba mirip dengan kue engkak dari provinsi lampung. Apakah kamu pernah membuat kue basah dengan ibu
-                                atau anggota keluarga lain, khususnya dalam momen hari raya? Berapa saja ukuran Loyang kue basah yang kamu ketahui?
+                            <p>Kue maksuba adalah salah satu kue tradisional yang berasal dari provinsi Sumatera Selatan. Dilihat dari tekstur dan rasa, maksuba mirip dengan kue engkak dari provinsi lampung. <br> Apakah kamu pernah membuat kue basah dengan
+                                ibu atau anggota keluarga lain, khususnya dalam momen hari raya? <br> Berapa saja ukuran Loyang kue basah yang kamu ketahui?
                             </p>
+                            <p class="mt-2">Ibu Ani ketika lebaran tahun lalu memfoto kue maksuba yang dibuatkan dengan ukuran Loyang 20 x 20 cm yang terlihat pada gambar 2.</p>
+                            <div class="portfolio-img d-flex flex-column align-items-center mt-3">
+                                <img src="assets/img/portfolio/Picture3.jpg " class="w-lg-50 img-fluid" alt="">
+                                <p class="fw-bold text-center">Gambar 3. Foto Kedua dari Kue Maksuba</p>
+                                <p class="fw-light text-center mb-3">Sumber: https://indihome.co.id/blog/5-contoh-keragaman-sosial-budaya-di-indonesia</p>
+                            </div>
                         </div>
                     </div>
                 </div>
