--- a/materi1.html
+++ b/materi1.html
@@ -155,6 +155,17 @@
                                 <p class="fw-bold text-center">Gambar 3. Foto Kedua dari Kue Maksuba</p>
                                 <p class="fw-light text-center mb-3">Sumber: https://indihome.co.id/blog/5-contoh-keragaman-sosial-budaya-di-indonesia</p>
                             </div>
+                            <p>Apakah gambar 3 terlihat proporsional seperti gambar 2? Berikan alasan Ananda.</p>
+                            <p class="mb-2">Jika gambar 3 tidak proporsional, bagaimana seharusnya tinggi dan panjang gambar 3 tersebut agar terlihat proporsional?</p>
+                            <p>Berdasarkan aktivitas sebelumnya, cobalah ananda menjawab beberapa pertanyaan berikut ini.</p>
+                            <ol class="list-group list-group-numbered mt-2 mb-3">
+                                <li class="list-group-item"> Informasi apa yang ananda peroleh dari membandingkan kedua gambar kue tersebut?</li>
+                                <li class="list-group-item">Apakah informasi yang ada pada soal cukup untuk menyelesaikan masalah yang ada?</li>
+                                <li class="list-group-item">Apa tujuan dari aktivitas menemukan solusi dari permasalahan yang ada?</li>
+                                <li class="list-group-item">4. Bagaimana hubungan antara informasi yang tersedia dengan solusi permalahan yang ingin dicapai?</li>
+                            </ol>
+                            <p>Mari kita mencoba menentukan ukuran tinggi dan panjang foto kue maksuba agar terlihat proporsional.</p>
+                            <p class="fw-bolder">Tabel 2. Rasio Tinggi dan Lebar Foto</p>
                         </div>
                     </div>
                 </div>
@@ -211,5 +222,7 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
+</html>
 
 </html>
