--- a/materi1.html
+++ b/materi1.html
@@ -166,6 +166,27 @@
                             </ol>
                             <p>Mari kita mencoba menentukan ukuran tinggi dan panjang foto kue maksuba agar terlihat proporsional.</p>
                             <p class="fw-bolder">Tabel 2. Rasio Tinggi dan Lebar Foto</p>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col"></th>
+                                        <th scope="col">Tinggi (dalam cm)</th>
+                                        <th scope="col">Lebar (dalam cm)</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                        <td>@mdo</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                        <td>@fat</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
