--- a/materi1.html
+++ b/materi1.html
@@ -176,17 +176,36 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
+                                        <td rowspan="2">Gambar 2</td>
+                                        <td>2</td>
+                                        <td>3</td>
+
                                     </tr>
                                     <tr>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
-                                        <td>@fat</td>
+                                        <td>...</td>
+                                        <td>...</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Gambar 3</td>
+                                        <td>...</td>
+                                        <td>...</td>
+                                    </tr>
+                                    <tr>
+                                        <td>...</td>
+                                        <td>...</td>
+                                        <td>...</td>
+                                    </tr>
+                                    <tr>
+                                        <td>...</td>
+                                        <td>...</td>
+                                        <td>...</td>
                                     </tr>
                                 </tbody>
                             </table>
+                            <p class="mt-3">Jika ukuran Gambar 3 memiliki 10 satuan dan 18 satuan akan terlihat proporsional? Berikan argumentasi ananda.</p>
+                            <div class="badge bg-dark text-wrap mt-3 p-2" style="width: 6rem;">
+                                Submit Tugas
+                            </div>
                         </div>
                     </div>
                 </div>
