--- a/materi3.html
+++ b/materi3.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Materi</title>
+    <title>Materi | Rasio</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -90,63 +90,38 @@
     <main id="main">
 
         <!-- ======= Services Section ======= -->
-        <section class="team section-bg">
+        <section id="services" class="services section-bg">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>materi</h2>
+                    <h2>rasio</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="materi1.html">
-                                    <h4>Konsep Perbandingan (Rasio dan Proporsi)</h4>
-                                </a>
+                    <div class="col " data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box">
+                            <div class="card">
+                                <img src="assets/img/portfolio/Picture5.jpg" class="card-img-top w-lg-50" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Gambar 5. Es Dawet</h5>
+                                    <h5 class="card-title text-center">Sumber: https://caramembuat.id/cara-membuat-es-pisang-ijo/</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+                                </div>
                             </div>
+                            <p>Indonesia dikenal sebagai Negara yang sangat beragam, keragaman dan kekayaan budaya yang berlimpah dengan memiliki 742 bahasa/dialek dari keragaman 478 suku bangsa. Suku bangsa yang tersebar dari Sabang hingga Merauke. </p>
+                            <p>Luasa wilayah Indonesia dari ujung barat dan timur Indonesia mencapai 5 120 km yang jika ditempuuh dengan menggunakan pesawat kurang lebih 12 jam waktu penerbangan. Sementara panjang dari selatan ke utara dengan luasan 1700
+                                km. Sedangkan panjang jarak dari selatan ke utara, lebih dari 1.700 km. Bayangkan, panjang pantai Indonesia sekitar 104.000 km, menduduki urutan nomor empat sebagai negara yang memiliki pantai terpanjang di dunia," katanya.
+                            </p>
+
+                            <p>Sedangkan luas daratan Indonesia, menurutnya, lebih dari dua juta kilometer, dengan luas lautan hampir tiga kali lipatnya. Artinya, dua per tiga wilayah Indonesia adalah lautan. "Hampir seperti penduduk Takalar yang mayoritas
+                                berprofesi di laut," katanya.</p>
                         </div>
                     </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="materi2.html">
-                                    <h4>Perbandingan Berbalik Nilai</h4>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books3.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="materi3.html">
-                                    <h4>Rasio</h4>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4 mt-lg-4" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="member d-flex align-items-start">
-                            <div class="pic"><img src="assets/img/team/books2.png" class="img-fluid" alt=""></div>
-                            <div class="member-info">
-                                <a href="">
-                                    <h4>Perbandingan Senilai</h4>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
 
             </div>
         </section>
+        <!-- End Services Section -->
 
     </main>
     <!-- End #main -->
@@ -196,5 +171,7 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
+</html>
 
 </html>
